# hydro-event-detector

./: .zenodo.json  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
