[project]
name = "hydro-event-detector"
version = "0.1.1"
description = "Detect hydrological events identifying peaks and calculating volumes."
authors = [{name = "Gonzalo Forero", email = "gonzaloforero57@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "hydro_event_detector", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
