[tool.poetry]
name = "hydro-event-detector"
version = "0.1.1"
description = "Detect hydrological events identifying peaks and calculating volumes."
authors = [
  "Gonzalo Forero Buitrago <gonzaloforero57@gmail.com>",
  "Humberto Vergara Arrieta <humberto-vergaraarrieta@uiowa.edu>"
]
readme = "README.md"
packages = [{include = "hydro_event_detector", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=2.3.0,<3.0.0"
scipy = ">=1.15.3,<2.0.0"
pandas = ">=2.3.0,<3.0.0"
plotly = ">=6.1.2,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


